# CrafterX

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.lingma/rules/: project_rule.md
crafterx/api/: doc_loader_api.py
crafterx/core/: Logger.py  __init__.py
crafterx/core/kb_manager/: doc_schema.py  milvus_manager.py
crafterx/core/loaders/: __init__.py  _loader_factory.py  base.py  client.py  excel_loader.py  factory.py  markdown_loader.py  pdf_loader.py  ppt_loader.py  ppt_loader_enhanced.py  readme.md  text_loader.py  word_loader.py
crafterx/core/loaders/base_loader/: excel.py  md.py  pdf.py  ppt.py  text.py  word.py
crafterx/core/loaders/experimental/: __init__.py  ppt_loader_enhanced.py
crafterx/core/splitters/: __init__.py  hybird_markdown_recursive.py  readme.md
crafterx/core/text_processor/: advanced_chunking.py  workflow.py
crafterx/exp/: build_rag_with_milvus.py
crafterx/server/: app.py  loader_app.py
crafterx/web/: loader_web.py
docker/milvus/: docker-compose.yml
scripts/: run_server.sh  run_server_single.sh  run_web.sh
src/exp/: build_rag_with_milvus.py
tests/core/kb_manager/: test_milvus_manager.py
