[project]
name = "crafterx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.2",
    "loguru>=0.7.3",
    "openai>=1.98.0",
    "pymilvus>=2.5.14",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]
