[project]
name = "crafterx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.2",
    "loguru>=0.7.3",
    "openai>=1.98.0",
    "pymilvus>=2.5.14",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
    "pypdf2>=1.28.6",
    "python-docx>=1.1.2",
    "docx2txt>=0.8",
    "python-pptx>=0.6.23",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "langchain-community>=0.3.27",
    "pymupdf>=1.26.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "python-multipart>=0.0.9",
    "streamlit>=1.32.0",
    "watchdog>=6.0.0",
    "gunicorn>=23.0.0",
]


[tool.poe.tasks]
web = "sh scripts/run_web.sh"
serve_single = "sh scripts/run_server_single.sh"
serve = "sh scripts/run_server.sh"

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
]

